added notification service
